--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@material-ui/core": "^4.2.1",
     "bootstrap": "^4.3.1",
     "firebase": "^6.3.1",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-flex": "^2.2.8",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
